# Wariat

./: TODO.txt  WariatCore2.code-workspace  WariatESP.code-workspace
.github/: copilot-instructions.md
WariatCommon/: ComInterface.hpp  ComMap.cpp  ComMap.hpp  ComMath.hpp  ComNavi.cpp  ComNavi.hpp  ComProtocol.cpp  ComProtocol.hpp  DeviceInterface.hpp  IdleState.hpp  MapRenderer.hpp  MoveForwardState.hpp  Wariat.hpp  WariatDrive.hpp
WariatCore2/: .gitignore  CMakeLists.txt  main.cpp
WariatCore2/src/: COREHcSr04s.hpp  COREInterface.hpp  ESPInterface.cpp  ESPInterface.hpp  Motors.cpp  Motors.hpp
WariatESP/: .gitignore  CMakeLists.txt
WariatESP/main/: CMakeLists.txt  ESPMapRenderer.hpp  ESPWariat.hpp  Map.cpp  Map.hpp  STM32Interface.cpp  STM32Interface.hpp  UartInterface.hpp  WWW.cpp  WWW.hpp  keep_alive.c  keep_alive.h  main.cpp  protocol_examples_common.cpp  protocol_examples_common.h  prvtkey.pem  servercert.pem  uart.cpp
WariatUE/: .gitignore
WariatUE/Source/WariatUE/: WariatUE.Build.cs  WariatUE.cpp  WariatUE.h  WariatUEGameMode.cpp  WariatUEGameMode.h  WariatUEPawn.cpp  WariatUEPawn.h  WariatUEPlayerController.cpp  WariatUEPlayerController.h  WariatUESportsCar.cpp  WariatUEUI.cpp  WariatUEUI.h  WariatUEWheelFront.cpp  WariatUEWheelFront.h  WariatUEWheelRear.cpp  WariatUEWheelRear.h
WariatUE/Source/WariatUE/OffroadCar/: WariatUEOffroadCar.cpp  WariatUEOffroadCar.h  WariatUEOffroadWheelFront.cpp  WariatUEOffroadWheelFront.h  WariatUEOffroadWheelRear.cpp  WariatUEOffroadWheelRear.h
WariatUE/Source/WariatUE/SportsCar/: WariatUESportsCar.h  (+4 more)
(+27 files in other folders)
